--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Database Configuration
-DATABASE_URL=postgresql://username:password@host:port/database
+# Database Configuration (Supabase)
+DATABASE_URL=postgresql://postgres.[ref]:[password]@aws-0-[region].pooler.supabase.com:6543/postgres
 
 # JWT Secret for authentication
 SESSION_SECRET=your-super-secret-jwt-key-here
