--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,8 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.ts",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.ts"
-    }
-  ],
   "functions": {
     "api/index.ts": {
+      "runtime": "nodejs18.x",
       "maxDuration": 30
     }
   }
