fix: Fix Vercel runtime version error
- Simplified vercel.json to basic configuration
- Removed invalid runtime specification
- Let Vercel auto-detect Node.js runtime

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "version": 2,
-  "functions": {
-    "api/index.ts": {
-      "runtime": "nodejs18.x",
-      "maxDuration": 30
-    }
-  }
+  "version": 2
 }
