--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,10 @@
   },
   "build": {
     "env": {
-      "NODE_VERSION": "18"
+      "NODE_VERSION": "20"
     }
+  },
+  "env": {
+    "NODE_VERSION": "20"
   }
 }
