--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,8 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "@vercel/node@3.0.0"
-    }
-  },
-  "build": {
-    "env": {
-      "NODE_VERSION": "18"
-    }
-  },
-  "env": {
-    "NODE_VERSION": "18"
-  }
+  "builds": [{
+    "src": "server/index.ts",
+    "use": "@vercel/node"
+  }],
+  "routes": [{"src": "/(.*)", "dest": "server/index.ts"}]
 }
