--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
-  "builds": [{
-    "src": "server/index.ts",
-    "use": "@vercel/node"
-  }],
-  "routes": [{"src": "/(.*)", "dest": "server/index.ts"}]
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "@vercel/node@3.0.0"
+    }
+  }
 }
